# rough_hook

./: .gitignore  Cargo.toml  LICENSE  README.md
cutechess/: CMakeLists.txt
cutechess/projects/gui/src/: hooklenswindow.cpp  hooklenswindow.h  mainwindow.cpp  mainwindow.h  roughguardwindow.cpp  roughguardwindow.h
databases/: README.md
hook_lens/: Cargo.toml
hook_lens/data_in_sql_lite/: chess_pieces_images_test.db  chess_pieces_images_tr.db  chess_pieces_images_trn.db  chess_pieces_images_ts.db
hook_lens/src/: data.rs  inference.rs  lib.rs  main.rs  model.rs  tests.rs  training.rs
hook_lens/src/data_and_model/: data.rs  inference.rs  model.rs  training.rs
hook_lens/src/input_data_handling/: board_square_extracting.rs  fen_string_generation.rs
hook_lens/src/test/: test_models_repository.rs  tests.rs
hook_lens_integration/: Cargo.toml
hook_lens_integration/src/: main.rs
integration/: Cargo.toml
kan/: Cargo.toml
kan/src/: data.rs  inference.rs
kanue/: Cargo.toml
kanue/src/: data.rs  inference.rs  lib.rs  main.rs  model.rs  training.rs
nnue/: Cargo.toml
nnue/src/: data.rs  inference.rs  main.rs  model.rs  training.rs
nnue_models/simple_with_more_data-40/: log.txt
rough_guard/: Cargo.toml
rough_guard/src/: data.rs  inference.rs  lib.rs  main.rs  model.rs  training.rs
rough_guard/src/data_rs/: distances_data.rs  norm_data.rs  unnorm_data.rs
rough_guard/src/test/: test_models_repository.rs  tests.rs
rough_guard_integration/: Cargo.toml  final_sample.db  sample.db
rough_guard_integration/PGN_container/PGN1/: rapid_00001506.pgn
rough_guard_integration/PGN_container/PGN2/: rapid_00000013.pgn
rough_guard_integration/src/: main.rs
rusty_brain/: Cargo.toml
rusty_brain/src/: alphabeta.rs  bitboards.rs  board.rs  castling.rs  evaluation.rs  helper.rs  lib.rs  magic.rs  main.rs  mcts.rs  movement.rs  nnue.rs  perft.rs  piece.rs  square.rs  tests.rs  transposition.rs  uci.rs  zobrist.rs
scripts/: README.md
scripts/hook_lens_scripts/: data_augmentation_script.py  data_splitting_script.py  image_resize_script.py
scripts/rough_guard_scripts/1. PGN Filtering/: pgn_preprocessing.py
scripts/rough_guard_scripts/2. Feature Extraction & DB Creation/: feature_extraction.py
scripts/rough_guard_scripts/3. Database Labeling/: label_db.py
scripts/rough_guard_scripts/3. Database Labeling/Preporcess Players/: .env  automation.bat
scripts/rough_guard_scripts/3. Database Labeling/Preporcess Players/1. Players Extraction/: player_extraction_to_json.py
scripts/rough_guard_scripts/3. Database Labeling/Preporcess Players/2. Unique Player Concatentation/: concat_json_players.py
scripts/rough_guard_scripts/3. Database Labeling/Preporcess Players/3. Label JSON/: player_json_labeling.py
scripts/rough_guard_scripts/4. Separate White & Black/: pgn_separate_features.py
scripts/rough_guard_scripts/5. Compute Euclidean Distance/: bucket_averages.json  compute_test_distances_using_averages.py  compute_train_distances.py
