[package]
name = "hook_lens"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.14.0", features = ["train", "wgpu", "vision", "tch"] }
serde = "*"
image = "*"
resnet-burn = { git = "https://github.com/tracel-ai/models", package = "resnet-burn", features = ["pretrained"] }
rusty_brain = {path = "../rusty_brain"}
