[package]
name = "rough_guard"
version = "0.1.0"
edition = "2021"

[features]
default = []

netlib = ["ndarray-linalg/netlib"]
openblas = ["ndarray-linalg/openblas"]
intel-mkl = ["ndarray-linalg/intel-mkl"]

netlib-static = ["ndarray-linalg/netlib-static"]
netlib-system = ["ndarray-linalg/netlib-system"]

openblas-static = ["ndarray-linalg/openblas-static"]
openblas-system = ["ndarray-linalg/openblas-system"]

intel-mkl-static = ["ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["ndarray-linalg/intel-mkl-system"]


[dependencies]
burn = { version = "0.14.0", features = ["train", "wgpu", "vision"] }
burn-cuda = "0.14.0"
burn-dataset = "*"
burn-efficient-kan = "*"
ndarray = "0.14"  
ndarray-linalg = "0.16"  
serde = "*"
rand = "0.8"

[dev-dependencies.ndarray-linalg]
version = "0.16"
features = ["netlib-system"]